--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -23,7 +23,10 @@
 
 body {
   background-color: #D32F2F;
-  font-family: 'Calibri', sans-serif !important
+  font-family: 'Calibri', sans-serif !important;
+  position: relative;
+  padding-bottom: 6em;
+  min-height: 100vh;
 }
 
 .mt-100 {
@@ -7886,6 +7889,9 @@ textarea.form-control-lg {
 .py-4 {
   padding-top: 1.5rem !important;
   padding-bottom: 1.5rem !important;
+  position: absolute;
+  bottom: 0;
+  width: 100%;
 }
 
 .py-5 {
