--- a/templates/categorias/listarCategorias.html
+++ b/templates/categorias/listarCategorias.html
@@ -42,6 +42,8 @@
             </div>
             <span class="text-end">
                 <button type="button" class="btn btn-primary btn-sm"><a class="dropdown-item"
+                    href="{% url 'articulos:addcategoria' %}">Nueva</a></button>
+                <button type="button" class="btn btn-danger btn-sm"><a class="dropdown-item"
                         href="{% url 'home' %}">Cancelar</a></button>
             </span>
         </div>
