--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -11,7 +11,7 @@
  * Licensed under MIT (https://github.com/twbs/bootstrap/blob/main/LICENSE)
  */
  
-@import url(http://fonts.googleapis.com/css?family=Calibri:400,300,700);
+/* @import url(http://fonts.googleapis.com/css?family=Calibri:400,300,700); */
 
 
 
