--- a/templates/base.html
+++ b/templates/base.html
@@ -85,7 +85,15 @@
 
     <main>
 
+        
+
         {% block contenido %}
+
+
+
+
+
+
         {% endblock contenido %}
 
     </main>
@@ -114,6 +122,22 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/js/bootstrap.min.js"
         integrity="sha384-7VPbUDkoPSGFnVtYi0QogXtr74QeVeeIs99Qfg5YCF+TidwNdjvaKZX19NZ/e6oz" crossorigin="anonymous">
         </script>
+
+        <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
+
+        {% if messages %}
+            {% for message in messages %}
+                <script>
+                    Swal.fire({
+                        'title': 'Felicitaciones',
+                        'text': '{{message}}',
+                        'icon': 'success',
+                    })
+                </script>
+            {% endfor %}
+        
+        {% endif %}
+
 </body>
 
 </html>
