--- a/templates/articulos/detalleArticulos.html
+++ b/templates/articulos/detalleArticulos.html
@@ -1,15 +1,12 @@
 {% extends 'base.html' %}
 {% load static %}
 
-
-
-
 {% block contenido %}
+
+<!-- BLOQUE QUE GENERA MSJ DE CONFIRMACION DE LA ELIMINACION DEL ARTICULO -->
 {% block js %}
 <script>
-
     function eliminarArticulo(id) {
-        
         Swal.fire({
             'title': '¿Estas seguro?',
             'text': 'Esta acción no se puede deshacer',
@@ -25,49 +22,33 @@
                 window.location.href = '{% url 'articulos:delete_articulo' pk=articulo.pk %}';
             }
         })
-
     }
-    
 </script>
 {% endblock js %}
-
-
-
-
-
-
-
 
 <!-- Contenido de la pagina-->
 <section class="py-5">
     <div class="container px-5 my-5">
         <div class="row gx-5">
             <div class="col-lg-12">
-                <!-- Contenido post-->
                 <article>
-                    <!-- Post header-->
+                    <!-- CONTENIDO DEL ARTICULO -->
                     <header class="mb-4">
-                        <!-- Post title-->
                         <h1 class="fw-bolder mb-1">{{ articulo.titulo }}</h1>
-                        <!-- Post meta content-->
                         <div class="text-muted fst-italic mb-2">{{ articulo.usuario_articulo.first_name}}, {{articulo.usuario_articulo.last_name}}</div>
                         <div class="text-muted fst-italic mb-2">{{ articulo.fecha_publicacion }}</div>
-                        <!-- Post categories-->
                         <a class="badge bg-secondary text-decoration-none link-light" href="#!">{{articulo.categoria_articulo }}</a>
                     </header>
-                    <!-- Preview image figure-->
                     <figure class="mb-4"><img class="img-fluid rounded" src="{{ articulo.imagen.url }}" alt="" />
                     </figure>
-                    <!-- Post content-->
                     <section class="mb-5">
                         <p class="fs-5 mb-4">{{ articulo.contenido_completo }}</p>                        
+                        <!-- SOLO APARECE BOTON DE EDITAR Y ELIMINAR ARTICULO SI ES COLABORADOR O SUPER USUARIO -->
                         {% if user.is_authenticated and tipo_usuario == 'Colaborador' or user.is_superuser %}
                         <button type="button" class="btn btn-secondary btn-sm"><a class="dropdown-item"
                                 href="{% url 'articulos:editArticulo' pk=articulo.pk %}">Editar Articulo</a></button>
                         <!-- <button type="button" class="btn btn-danger btn-sm"><a class="dropdown-item" href="{% url 'articulos:delete_articulo' pk=articulo.pk %}">Borrar Articulo</a></button> -->
                             <a href="#" class="btn btn-danger btn-sm" onclick="eliminarArticulo({{articulo.pk}})">Eliminar Artículo</a>
-
-
 
                         <form method="POST" action="{% url 'articulos:detalleArticulos' pk=articulo.pk %}">
                             {% csrf_token %}
@@ -81,6 +62,7 @@
                     </div>
                     <div class="card bg-light">
                         <div class="card-body">
+                            <!-- SI ESTA LOGUEADO RECIEN SE LE HABILITA PARA PODER COMENTAR -->
                             {% if user.is_authenticated %}
                             <form method="POST" action="{% url 'articulos:add_comentario' articulo.pk %}">
                                 {% csrf_token %}
@@ -118,16 +100,16 @@
                                                     <div class="comment-footer"> 
                                                         <div class="text-muted fst-italic mb-2">{{comentario.fecha_publicacion}}</div>                                                        
                                                         <span class="text-muted float-end">
-                                                            {% if comentario.usuario_comentario_id == user.id %}                                                            
+                                                            {% if comentario.usuario_comentario == user%}                                                            
                                                             <button type="button" class="btn btn-secondary btn-sm"><a class="dropdown-item"
                                                                     href="{% url 'articulos:edit_comentario' comentario_id=comentario.pk %}">Editar</a></button>
-                                                            <button type="button" class="btn btn-danger btn-sm"><a class="dropdown-item"
-                                                                    href="{% url 'articulos:delete_comentario' comentario_id=comentario.pk %}">Borrar</a></button>                                                    
-                                                                            
-                                                            {% elif tipo_usuario == 'Colaborador' or user.is_superuser %}
-                                                            <button type="button" class="btn btn-danger btn-sm"><a class="dropdown-item"
-                                                                    href="{% url 'articulos:delete_comentario' comentario_id=comentario.pk %}">Borrar</a></button>
-                                                            {% endif %}                                                          
+                                                            {% endif %}                                             
+                                                            {% if comentario.usuario_comentario == user or user.is_superuser or user.is_staff%}                                                            
+                                                            <button type="button" onclick="eliminarComentario()" class="btn btn-danger btn-sm"><a class="dropdown-item"
+                                                                    href="#">Borrar</a></button>       
+                                                            {% endif %}
+                                                            
+                                                                                                                      
                                                         </span>
                                                     </div>                                                        
                                                 </div>                                                
@@ -135,6 +117,30 @@
                                         </div>
                                     </div>
                                 </div>
+
+                                <!-- BLOQUE QUE GENERA MSJ DE CONFIRMACION DE LA ELIMINACION DEL COMENTARIO -->
+                                {% block eliminarComentario %}
+                                    <script>
+                                        function eliminarComentario() {
+                                            Swal.fire({
+                                                'title': '¿Estas seguro?',
+                                                'text': 'Esta acción no se puede deshacer',
+                                                'icon': 'question',
+                                                'showCancelButton': true,
+                                                'cancelButtonText': 'No, Cancelar',
+                                                'confirmButtonText': 'Si, Eliminar',
+                                                'reverseButtons': true,
+                                                'confirmButtonColor': '#dc3545',
+                                            })
+                                            .then(function(result){
+                                                if (result.isConfirmed){             
+                                                    window.location.href = '{% url 'articulos:delete_comentario' comentario_id=comentario.pk %}';
+                                                }
+                                            })
+                                        }
+                                    </script>
+                                {% endblock eliminarComentario %}
+
                                 {% endfor %}                               
                             </div>
                         </div>
@@ -147,4 +153,6 @@
         </div>
     </div>
 </section>
+
+
 {% endblock contenido %}
