Corregido mensajes y alertas al ejecutar acciones como eliminar y agregar

--- a/templates/base.html
+++ b/templates/base.html
@@ -129,9 +129,9 @@
             {% for message in messages %}
                 <script>
                     Swal.fire({
-                        'title': 'Felicitaciones',
+                        'title': 'Blog Cocina',
                         'text': '{{message}}',
-                        'icon': 'success',
+                        'icon': 'info',
                     })
                 </script>
             {% endfor %}
