template acerca de

--- a/templates/acerca_de.html
+++ b/templates/acerca_de.html
@@ -84,14 +84,16 @@
 <section class="py-5 bg-light">
     <div class="container px-5 my-5">
         <div class="text-center">
+            <img class="img-fluid rounded-circle mb-3 px-3" src="{% static 'img/informatorio.jpg'%}"
+                        alt="..." width="30%" />
             <h2 class="fw-bolder">Grupo 4 - Informatorio</h2>
             <p class="lead fw-normal text-muted mb-5">Integrantes:</p>
         </div>
         <div class="row gx-5 row-cols-1 row-cols-sm-2 row-cols-xl-3 justify-content-center">
             <div class="col mb-4 mb-4 mb-xl-0">
                 <div class="text-center">
-                    <img class="img-fluid rounded-circle mb-3 px-3" src="{% static 'img/informatorio-logo.png'%}"
-                        alt="..." />
+                    <img class="img-fluid rounded-circle mb-3 px-3" src="{% static 'img/dev.jpg'%}"
+                        width="50%" />
                     <h5 class="fw-bolder">Paula Micaela Tourn</h5>
                     <div class="fst-italic text-muted">Estudiante Informatorio</div>
                     <div class="fst-italic text-muted">Desarrollo web - Django</div>
@@ -99,8 +101,8 @@
             </div>
             <div class="col mb-4 mb-4 mb-xl-0">
                 <div class="text-center">
-                    <img class="img-fluid rounded-circle mb-3 px-3" src="{% static 'img/informatorio-logo.png'%}"
-                        alt="..." />
+                    <img class="img-fluid rounded-circle mb-3 px-3" src="{% static 'img/dev.jpg'%}"
+                        alt="..." width="50%" />
                     <h5 class="fw-bolder">Gerardo German Rios</h5>
                     <div class="fst-italic text-muted">Estudiante Informatorio</div>
                     <div class="fst-italic text-muted">Desarrollo web - Django</div>
@@ -108,8 +110,8 @@
             </div>
             <div class="col mb-4 mb-4 mb-sm-0">
                 <div class="text-center">
-                    <img class="img-fluid rounded-circle mb-3 px-3" src="{% static 'img/informatorio-logo.png'%}"
-                        alt="..." />
+                    <img class="img-fluid rounded-circle mb-3 px-3" src="{% static 'img/dev.jpg'%}"
+                        alt="..." width="50%" />
                     <h5 class="fw-bolder">Juan Esteban Boscarino</h5>
                     <div class="fst-italic text-muted">Estudiante Informatorio</div>
                     <div class="fst-italic text-muted">Desarrollo web - Django</div>
@@ -117,8 +119,8 @@
             </div>
             <div class="col mb-4">
                 <div class="text-center">
-                    <img class="img-fluid rounded-circle mb-3 px-3" src="{% static 'img/informatorio-logo.png'%}"
-                        alt="..." />
+                    <img class="img-fluid rounded-circle mb-3 px-3" src="{% static 'img/dev.jpg'%}"
+                        alt="..." width="50%" />
                     <h5 class="fw-bolder">Mauricio Aguirre</h5>
                     <div class="fst-italic text-muted">Estudiante Informatorio</div>
                     <div class="fst-italic text-muted">Desarrollo web - Django</div>
@@ -126,7 +128,7 @@
             </div>
             <div class="col mb-4">
                 <div class="text-center">
-                    <img class="img-fluid rounded-circle mb-3 px-3" src="{% static 'img/informatorio-logo.png'%}" />
+                    <img class="img-fluid rounded-circle mb-3 px-3" src="{% static 'img/dev.jpg'%}" width="50%" />
                     <h5 class="fw-bolder">Jorge Leandro Alarcon</h5>
                     <div class="fst-italic text-muted">Estudiante Informatorio</div>
                     <div class="fst-italic text-muted">Desarrollo web - Django</div>
