borrado texto, integrantes, template acerca de

--- a/templates/acerca_de.html
+++ b/templates/acerca_de.html
@@ -86,7 +86,7 @@
         <div class="text-center">
             <img class="img-fluid rounded-circle mb-3 px-3" src="{% static 'img/informatorio.jpg'%}"
                         alt="..." width="30%" />
-            <h2 class="fw-bolder">Grupo 4 - Informatorio</h2>
+            <h2 class="fw-bolder">Grupo 4</h2>
             <p class="lead fw-normal text-muted mb-5">Integrantes:</p>
         </div>
         <div class="row gx-5 row-cols-1 row-cols-sm-2 row-cols-xl-3 justify-content-center">
